crates/air_r_parser/tests/snapshots/error/namespace_expression/call_lhs_triple_colon.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
a():::b
```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RBogusExpression {
            items: [
                RCall {
                    function: RIdentifier {
                        name_token: IDENT@0..1 "a" [] [],
                    },
                    arguments: RCallArguments {
                        l_paren_token: L_PAREN@1..2 "(" [] [],
                        items: RArgumentList [],
                        r_paren_token: R_PAREN@2..3 ")" [] [],
                    },
                },
                COLON3@3..6 ":::" [] [],
                IDENT@6..7 "b" [] [],
            ],
        },
    ],
    eof_token: EOF@7..7 "" [] [],
}
```

## CST

```
0: R_ROOT@0..7
  0: (empty)
  1: R_EXPRESSION_LIST@0..7
    0: R_BOGUS_EXPRESSION@0..7
      0: R_CALL@0..3
        0: R_IDENTIFIER@0..1
          0: IDENT@0..1 "a" [] []
        1: R_CALL_ARGUMENTS@1..3
          0: L_PAREN@1..2 "(" [] []
          1: R_ARGUMENT_LIST@2..2
          2: R_PAREN@2..3 ")" [] []
      1: COLON3@3..6 ":::" [] []
      2: IDENT@6..7 "b" [] []
  2: EOF@7..7 "" [] []

```

## Errors

```
expected an identifier or string before `::`
```
