crates/air_r_parser/tests/snapshots/error/namespace_expression/chained_triple_colon.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
a:::b:::c
```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RBogusExpression {
            items: [
                RNamespaceExpression {
                    left: RIdentifier {
                        name_token: IDENT@0..1 "a" [] [],
                    },
                    operator: COLON3@1..4 ":::" [] [],
                    right: RIdentifier {
                        name_token: IDENT@4..5 "b" [] [],
                    },
                },
                COLON3@5..8 ":::" [] [],
                IDENT@8..9 "c" [] [],
            ],
        },
    ],
    eof_token: EOF@9..9 "" [] [],
}
```

## CST

```
0: R_ROOT@0..9
  0: (empty)
  1: R_EXPRESSION_LIST@0..9
    0: R_BOGUS_EXPRESSION@0..9
      0: R_NAMESPACE_EXPRESSION@0..5
        0: R_IDENTIFIER@0..1
          0: IDENT@0..1 "a" [] []
        1: COLON3@1..4 ":::" [] []
        2: R_IDENTIFIER@4..5
          0: IDENT@4..5 "b" [] []
      1: COLON3@5..8 ":::" [] []
      2: IDENT@8..9 "c" [] []
  2: EOF@9..9 "" [] []

```

## Errors

```
expected an identifier or string before `:::`
```
